src/test/ui/consts/const-eval/heap/alloc_intrinsic_errors.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/alloc_intrinsic_errors.rs:9:17
   |
LL | const FOO: i32 = foo();
   |                  ----- inside `FOO` at $DIR/alloc_intrinsic_errors.rs:6:18
...
LL |         let _ = intrinsics::const_allocate(4, 3) as * mut i32;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 align has to be a power of 2, `3` is not a power of 2
   |                 inside `foo` at $DIR/alloc_intrinsic_errors.rs:9:17

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
